se realizo estructura basico

--- a/ejemplosjs.html
+++ b/ejemplosjs.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EJEMPLOS JS</title>
+    <link rel="stylesheet" href="https://github.com/salvdor-juarez/proyectoejemplosjs.git">
 
 </head>
 <body>
+    <section>
+        <h1>ejercicios js</h1>
+        <div class="barra de direcciones">
+
+        </div>
+        <div class="faboritos">
+
+        </div>
+    </section>
+    <section>
+        <div class="gmail">
+       
+        </div>
+         <div class="google">
+
+         </div>
+         <div class="buscador">
+
+         </div>
+         <div class="miniaturas1">
+
+         </div>
+         <div class="miniaturas2">
+            
+         </div>
+    </section>
     </body>
 </html>
